<resources>
    <string name="app_name">TaskTimeTraker</string>
    <string name="action_settings">Settings</string>
    <string name="there_are_no_remaining_tasks_to_complete">There are no remaining tasks to complete.</string>
    <string name="task_description">Task Description</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="task_name">Task Name</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="task_state">Task State</string>
    <string name="start_stop">start/stop</string>
    <string name="end_restart">end/restart</string>
    <string name="delete_history">Delete History</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="formatdate">MM/dd/yyyy</string>
    <string name="formathour">hh:mm aa</string>
    <string name="stoped">Stoped</string>
    <string name="started">Started</string>
    <string name="ended">Ended</string>
    <string name="expended_time_is_here">Expended time is here</string>
    <string name="time_expended">Time expended:</string>
    <string name="active_task_periods">Active task periods:</string>

</resources>
