<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_aplicacion"
    tools:context=".TaskPeriods">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"
            android:textColor="@color/item_text_color"
            android:textColorHint="@color/text_hint_color"
            android:id="@+id/tvTask"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textColor="@color/item_text_color"
                    android:textColorHint="@color/text_hint_color"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:textColor="@color/item_text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:id="@+id/tvTaskStartDate"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hour"
                    android:textColor="@color/item_text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:id="@+id/tvTaskStartHour"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textColor="@color/item_text_color"
                    android:textColorHint="@color/text_hint_color"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:textColor="@color/item_text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:id="@+id/tvTaskEndDate"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hour"
                    android:textColor="@color/item_text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:id="@+id/tvTaskEndHour"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/def_padding"
                android:layout_marginRight="@dimen/def_padding"
                android:text="@string/time_expended"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/def_padding"
                android:layout_marginRight="@dimen/def_padding"
                android:hint="@string/expended_time_is_here"
                android:id="@+id/tvExpendedTime"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left|center_vertical">
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/start_stop"
                android:layout_marginRight="@dimen/def_padding"
                android:id="@+id/btnStartStop"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/end_restart"
                android:layout_marginRight="@dimen/def_padding"
                android:id="@+id/btnEndRestart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/def_padding"
                android:hint="@string/task_state"
                android:textColor="@color/item_text_color"
                android:textColorHint="@color/text_hint_color"
                android:id="@+id/tvTaskState"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active_task_periods"/>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/def_padding"
            android:weightSum="1"
            app:layout_anchorGravity="right|bottom">
            <!--
                    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/adView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        ads:adSize="BANNER"
                        ads:adUnitId="@string/banner_ad_unit_id_mainact"/>
            -->
            <ListView
                android:id="@+id/lvPeriodsList"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:layout_weight="1"
                android:divider="@color/divisor_lista_reservas"
                android:dividerHeight="1sp"
                android:orientation="vertical" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>