<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/def_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textColor="@color/item_text_color"
                android:textColorHint="@color/text_hint_color"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:textColor="@color/item_text_color"
                android:textColorHint="@color/text_hint_color"
                android:id="@+id/tvPeriodStartDate"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hour"
                android:textColor="@color/item_text_color"
                android:textColorHint="@color/text_hint_color"
                android:id="@+id/tvPeriodStartHour"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textColor="@color/item_text_color"
                android:textColorHint="@color/text_hint_color"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:textColor="@color/item_text_color"
                android:textColorHint="@color/text_hint_color"
                android:id="@+id/tvPeriodEndDate"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hour"
                android:textColor="@color/item_text_color"
                android:textColorHint="@color/text_hint_color"
                android:id="@+id/tvPeriodEndHour"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left|center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/def_padding"
            android:layout_marginRight="@dimen/def_padding"
            android:text="@string/time_expended"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/def_padding"
            android:layout_marginRight="@dimen/def_padding"
            android:hint="@string/expended_time_is_here"
            android:id="@+id/tvPeriodExpendedTime"/>
    </LinearLayout>

</LinearLayout>